--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,6 @@ galaxy_info:
   galaxy_tags:
     - htcondor
     - lrms
-dependencies:
-  - { role: 'geerlingguy.ntp', ntp_config_server: [ntp.upv.es, ntp.uv.es] }
-  - { role: 'grycap.ssh', ssh_type_of_node: "{{ htcondor_type_of_node }}", ssh_user: "{{ htcondor_ssh_user }}" }
+#dependencies:
+#  - { role: 'geerlingguy.ntp', ntp_config_server: [ntp.upv.es, ntp.uv.es] }
+#  - { role: 'grycap.ssh', ssh_type_of_node: "{{ htcondor_type_of_node }}", ssh_user: "{{ htcondor_ssh_user }}" }
